--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "pi-bot-monitor",
   "version": "1.0.0",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "stellar-sdk": "^10.4.0"
   }
