--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "pi-auto-transfer",
   "version": "1.0.0",
+  "description": "Automated Stellar transfer bot",
   "main": "multiBot.js",
   "scripts": {
     "start": "node multiBot.js"
   },
   "dependencies": {
-    "stellar-sdk": "^10.4.0"
+    "@stellar/stellar-sdk": "^10.4.1",
+    "axios": "^1.6.8",
+    "node-cron": "^3.0.3"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
