--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
-  "name": "pi-auto-transfer",
+  "name": "pi-claim-bot",
   "version": "1.0.0",
-  "description": "Automated Stellar transfer bot",
   "main": "multiBot.js",
+  "type": "commonjs",
   "scripts": {
-    "start": "node multiBot.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "@stellar/stellar-sdk": "^12.0.1",
-    "axios": "^1.6.8",
-    "node-cron": "^3.0.3"
-  },
-  "engines": {
-    "node": ">=18"
+    "@stellar/stellar-sdk": "10.5.1"
   }
 }
