--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "pi-claim-bot",
   "version": "1.0.0",
+  "type": "module",
   "main": "multiBot.js",
-  "type": "commonjs",
   "scripts": {
     "start": "node multiBot.js"
   },
   "dependencies": {
-    "@stellar/stellar-sdk": "10.4.1"
+    "@stellar/stellar-sdk": "^10.4.0"
   }
 }
