--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node multiBot.cjs"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "@stellar/stellar-sdk": "^13.3.0"
   }
 }
