--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  "name": "pi-claim-bot",
+  "name": "multi-pi-claim-bot",
   "version": "1.0.0",
-  "type": "commonjs",
-  "main": "multiBot.cjs",
   "scripts": {
-    "start": "node multiBot.cjs"
+    "start": "node multiBot.js"
   },
   "dependencies": {
     "express": "^4.18.2",
