--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "@stellar/stellar-sdk": "^13.3.0"
+    "@stellar/stellar-sdk": "10.4.0"
   }
 }
