--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "multi-pi-claim-bot",
+  "name": "top-bot",
   "version": "1.0.0",
   "scripts": {
     "start": "node multiBot.js"
   },
   "dependencies": {
+    "@stellar/stellar-sdk": "^12.1.0",
     "express": "^4.18.2",
-    "@stellar/stellar-sdk": "10.4.0"
+    "moment-timezone": "^0.5.40"
   }
 }
