--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "node multiBot.js"
   },
   "dependencies": {
-    "@stellar/stellar-sdk": "^12.1.0",
+    "@stellar/stellar-sdk": "10.4.0",
     "express": "^4.18.2",
     "moment-timezone": "^0.5.40"
   }
