--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node multiBot.js"
   },
   "dependencies": {
-    "stellar-sdk": "^10.4.0"
+    "stellar-sdk": "^10.4.0",
+    "express": "^4.18.4"
   }
 }
