--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "stellar-sdk": "^10.4.0",
-    "express": "^4.18.4"
+    "express": "^4.18.4",
+    "nodemailer": "^6.9.9"
   }
 }
