--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "stellar-sdk": "^10.4.0",
     "express": "^4.18.4",
-    "nodemailer": "^6.9.9"
+    "nodemailer": "^6.9.9",
+    "dotenv": "^16.3.1"
   }
 }
